--- a/css/style.css
+++ b/css/style.css
@@ -91,12 +91,14 @@ footer {
 }
 
 .sec1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     padding-top: 100px;
-    padding-left: 400px;
-    padding-right: 400px;
     padding-bottom: 250px;
-    text-align: center;
     height: 50%;
+    text-align: center;
 }
 
 .sec2 {
@@ -183,3 +185,11 @@ footer {
     justify-content: center;
     width: 100%;
 }
+
+/* media screens 
+
+@media screen and (min-width: 480px) {
+    body {
+    }
+  }
+  */
